--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "firebase": "^9.21.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "swiper": "^9.3.1",
